scale position fixes

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/spur/transform-plugin#readme",
   "dependencies": {
-    "spur-events": "^0.1.1",
-    "spur-interaction-lock": "github:spur/interaction-lock#master"
+    "spur-events": "^0.1.3",
+    "spur-interaction-lock": "^0.1.2"
   }
 }
